--- a/microcurso-dev.properties
+++ b/microcurso-dev.properties
@@ -1,1 +1,7 @@
 microcurso.property=Microcurso Profile Dev
+
+# conexion
+spring.datasource.url=jdbc:mariadb://localhost:3306/product?useUnicode=true&characterEncoding=UTF8&useSSL=false
+spring.datasource.username=product
+spring.datasource.password=Cpro123db
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB106Dialect
