--- a/booking-dev.properties
+++ b/booking-dev.properties
@@ -3,6 +3,4 @@ spring.jpa.hibernate.ddl.auto=update
 spring.jpa.show.sql=true
 spring.jpa.generate.ddl=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
-spring.datasource.username=root
-spring.datasource.password=Cpro123db
+# Base de datos
