--- a/microcurso-dev.properties
+++ b/microcurso-dev.properties
@@ -7,4 +7,4 @@ spring.datasource.username=product
 spring.datasource.password=Cpro123db
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB106Dialect
 
-app.testProp=Property of test updated for bus and message broker
+app.testProp=Property of test updated for bus and message broker2
