--- a/booking-dev.properties
+++ b/booking-dev.properties
@@ -4,3 +4,4 @@ spring.jpa.show.sql=true
 spring.jpa.generate.ddl=true
 
 # Base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
