--- a/booking-dev.properties
+++ b/booking-dev.properties
@@ -2,6 +2,8 @@ booking.property=Booking Profile Dev
 spring.jpa.hibernate.ddl.auto=update
 spring.jpa.show.sql=true
 spring.jpa.generate.ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 
 # Base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
